<?xml version="1.0" encoding="utf-8"?>
<!-- layout untuk JokeActivity -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JokeActivity"
    android:id="@+id/activity_joke">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btn_lagi"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/background_button_purple"
        android:fontFamily="@font/poppins_medium"
        android:text="Lagi"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_joke" />

    <TextView
        android:id="@+id/tv_joke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/poppins"
        android:text="Untuk menyegarkan pikiran kamu biar lebih semangat untuk melanjutkan kursus"
        android:textColor="@color/colorPurpleBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView51" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Lelucon Bapak-bapak"
        android:textColor="@color/colorPurpleBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_laugh" />

    <Button
        android:id="@+id/btn_suka"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/ic_border_purple"
        android:fontFamily="@font/poppins_medium"
        android:text="Suka"
        android:textAllCaps="false"
        android:textColor="@color/colorPurpleButton"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_joke" />

    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="17dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/textView51"
        app:layout_constraintStart_toEndOf="@+id/textView51"
        app:srcCompat="@drawable/ic_like" />


</androidx.constraintlayout.widget.ConstraintLayout>