<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="Beranda" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="Cari" />
    <item
        android:id="@+id/courseFragment"
        android:icon="@drawable/ic_kursus"
        android:title="Kursus Saya" />
    <item
        android:id="@+id/funFragment"
        android:icon="@drawable/ic_joke"
        android:title="Lelucon" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_akun"
        android:title="Akun" />
</menu>