...
            android:text="Batal"
            android:textAllCaps="false"
            android:textColor="@color/colorPurpleButton"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/background_button_purple"
            android:fontFamily="@font/poppins_bold"
            android:text="Ya"
            android:textAllCaps="false"
            app:backgroundTint="@null" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
